--- a/index.html
+++ b/index.html
@@ -38,51 +38,15 @@
           maxZoom: 19
         }).addTo(map);
 
-        var institutions = {"type": "FeatureCollection",
-          "features": geojson["features"].filter(function(obj){
-            if (obj["properties"]["type"] === "inst"){
-              return true;
-            } else {
-              return false;
-            }
-          })
-        };
-        var patrons = {"type": "FeatureCollection",
-          "features": geojson["features"].filter(function(obj){
-            if (obj["properties"]["type"] === "patron"){
-              return true;
-            } else {
-              return false;
-            }
-          })
-        };
-        var essayPatrons = {"type": "FeatureCollection",
-          "features": geojson["features"].filter(function(obj){
-            if (obj["properties"]["type"] === "essay_patron") {
-              return true;
-            } else {
-              return false;
-            }
-          })
-        };
+        var institutions = filterFeatureCollection("inst");
 
-        function getPopupContent(feature){
-          var content = "<h4>" + feature.properties.name + "</h4><hr><p><strong>Address</strong>: " + feature.properties.address; + returnExternalLink(feature) + "</p>")
-          if(feature.properties.link === "") {
-            content = content + "";
-          } else {
-            content = content + "<br /><strong>External Link</strong>: <a href='" + feature.properties.link + "' target='_blank'>More info <span class='glyphicon glyphicon-new-window'></span></a>";
-          };
-          content = content + "</p>";
-          return content
-        };
-
-        var radius = 4;
-        var fillOpacity = 0.7;
+        var patrons = filterFeatureCollection("patron");
+        
+        var essayPatrons = filterFeatureCollection("essay_patron");
 
         var institutionsLayer = L.geoJSON(institutions, {
           pointToLayer: function(feature, latlng) {
-            return L.circleMarker(latlng, { radius: radius, fillColor: "#DD0000", color: "#666", weight: 1, opacity: 0.8, fillOpacity: fillOpacity });
+            return L.circleMarker(latlng, getCircleMarker("#DD0000"));
           },
           onEachFeature: function(feature, layer) {
             layer.bindPopup(getPopupContent(feature));
@@ -92,7 +56,7 @@
 
         var patronsLayer = L.geoJSON(patrons, {
           pointToLayer: function(feature, latlng) {
-            return L.circleMarker(latlng, { radius: radius, fillColor: "#0000DD", color: "#666", weight: 1, opacity: 0.8, fillOpacity: fillOpacity });
+            return L.circleMarker(latlng, getCircleMarker("#0000DD"));
           },
           onEachFeature: function(feature, layer) {
             layer.bindPopup(getPopupContent(feature));
@@ -102,14 +66,62 @@
 
         var essayPatronsLayer = L.geoJSON(essayPatrons, {
           pointToLayer: function(feature, latlng) {
-            return L.circleMarker(latlng, { radius: radius, fillColor: "#00DD00", color: "#666", weight: 1, opacity: 0.8, fillOpacity: fillOpacity });
+            return L.circleMarker(latlng, getCircleMarker("#00DD00"))
           },
           onEachFeature: function(feature, layer) {
             layer.bindPopup(getPopupContent(feature));
-            layer.bindTooltip(L.tooltip({permanent: true, opacity: fillOpacity}).setContent(feature.properties.name));
+            layer.bindTooltip(L.tooltip({permanent: true, opacity: 0.7}).setContent(feature.properties.name));
           }
         });
         map.addLayer(essayPatronsLayer);
+
+        map.on('zoomend', function(){
+          //var layers = [institutionsLayer, patronsLayer, essayPatronsLayer];
+          //layers.forEach(function(layer){
+          console.log("at " + map.getZoom());
+          
+          var features = Object.keys(essayPatronsLayer._layers);
+          if(map.getZoom() === 13){
+            features.forEach(function(feature){
+              essayPatronsLayer._layers[feature].closeTooltip();
+            });
+          } else {
+            features.forEach(function(feature){
+              essayPatronsLayer._layers[feature].openTooltip();
+            });
+          };
+
+
+          //});
+        });
+
+        function getCircleMarker(fillColor){
+          return { radius: 4, fillColor: fillColor, color: "#666", weight: 1, opacity: 0.8, fillOpacity: 0.7 };
+        };
+
+        function filterFeatureCollection(string){
+          var collection = {"type": "FeatureCollection",
+            "features": geojson["features"].filter(function(obj){
+              if (obj["properties"]["type"] === string){
+                return true;
+              } else {
+                return false;
+              }
+            })
+          };
+          return collection;
+        };
+
+        function getPopupContent(feature){
+          var content = "<h4>" + feature.properties.name + "</h4><hr><p><strong>Address</strong>: " + feature.properties.address;
+          if(feature.properties.link === "") {
+            content = content + "";
+          } else {
+            content = content + "<br /><strong>External Link</strong>: <a href='" + feature.properties.link + "' target='_blank'>More info <span class='glyphicon glyphicon-new-window'></span></a>";
+          };
+          content = content + "</p>";
+          return content;
+        };
 
       </script>
 
