Update attribution on map.

--- a/1944map.html
+++ b/1944map.html
@@ -30,7 +30,7 @@
       <script>
         var map = L.map('map', {zoom: 14, minZoom: 13, maxZoom: 18, center: [48.858217, 2.274852], maxBounds: L.latLngBounds(L.latLng(48.80993843039284,2.42069331467708), L.latLng(48.90647632023956, 2.24692255999388)) });
         L.tileLayer('./1943mapdesat/{z}/{x}/{y}.png', {
-          attribution: 'Princeton University',
+          attribution: '<a href="http://map.princeton.edu/search/viewer/#/2A3A6937-9E78-4896-B594-F48FE1A492F9" target="_blank">1944, Great Britain War Office, General Staff, Geographical Section</a>, ℅ <a href="http://map.princeton.edu" target="_blank">Princeton Univ. Lib.</a>',
           tms: true,
           maxZoom: 18,
           maxNativeZoom: 16
