Change more info

--- a/1944map.html
+++ b/1944map.html
@@ -133,7 +133,7 @@
           if(feature.properties.link === "") {
             content = content + "";
           } else {
-            content = content + "<br /><strong>External Link</strong>: <a href='" + feature.properties.link + "' target='_blank'>More info <span class='glyphicon glyphicon-new-window'></span></a>";
+            content = content + "<br /><a href='" + feature.properties.link + "' target='_blank'>More info <span class='glyphicon glyphicon-new-window'></span></a>";
           };
           content = content + "</p>";
           return content;
